--- a/main.html
+++ b/main.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./src/css/main.css" />
 	</head>
 	<body>
-		<div style="width: 400px; height: 200px; background-color: rgb(196, 196, 196)" id="background"></div>
-		<div class="drag" style="width: 10vw; height: 10vh; background-color: rgb(219, 255, 255)" id="test1"></div>
-		<div class="drag" style="width: 10vw; height: 10vh; background-color: rgb(212, 255, 229)" id="test2"></div>
-		<div style="width: 10vw; height: 10vh; background-color: rgb(239, 255, 197)" id="test3"></div>
-		<div style="width: 10vw; height: 10vh; background-color: rgb(233, 209, 253)" id="test4"></div>
+		<script type="text/javascript" src="./src/js/editorManager.js"></script>
+		<script type="text/javascript" src="./src/js/main.js"></script>
 	</body>
-	<script type="text/javascript" src="./js/dragManager.js"></script>
-	<script type="text/javascript" src="./js/main.js"></script>
 </html>
