--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="google-site-verification" content="Wdu4XrUWejJiMsTRsnAZoX7sFZLuGutPs0uZKCWGJYg" />
 		<link rel="stylesheet" href="./src/css/main.css" />
 	</head>
 	<body>
