htmlにgithubへのリンクを追加

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="./src/css/main.css" />
 	</head>
 	<body>
+		<a href="https://github.com/Satoyans/JsonUI_custom_form_editor">Githubへのリンク</a>
 		<script type="text/javascript" src="./src/js/editorManager.js"></script>
 	</body>
 </html>
