--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 		<title>JsonUI custom form editor</title>
 	</head>
 	<body>
-		<a href="https://github.com/Satoyans/JsonUI_custom_form_editor">Githubへのリンク</a>
+		<h1 hidden>JsonUI custom form editor</h1>
+		<a href="https://github.com/Satoyans/JsonUI_custom_form_editor" hidden>Githubへのリンク</a>
+		<div id="body_div"></div>
 		<script type="text/javascript" src="./src/js/editorManager.js"></script>
 	</body>
 </html>
