--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="google-site-verification" content="Wdu4XrUWejJiMsTRsnAZoX7sFZLuGutPs0uZKCWGJYg" />
-		<meta name="description" content="Editor to easily create custom forms for JsonUI,JsonUIのカスタムフォームを簡単に作成するためのエディター" />
+		<meta
+			name="description"
+			content="
+		Editor to easily create custom forms for JsonUI.
+		JsonUIのカスタムフォームを簡単に作成するためのエディター
+		"
+		/>
 		<link rel="stylesheet" href="./src/css/main.css" />
 		<title>JsonUI custom form editor</title>
 	</head>
